--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     "tzdata==2024.2",
     "urllib3==2.3.0",
     "wcwidth==0.2.13",
+    "tabulate>=0.9.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
