--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ dependencies = [
     "urllib3==2.3.0",
     "wcwidth==0.2.13",
     "tabulate>=0.9.0",
+    "pytest>=8.3.4",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
