--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ dependencies = [
     "wcwidth==0.2.13",
     "tabulate>=0.9.0",
     "pytest>=8.3.4",
+    "pre-commit>=4.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
