--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dependencies = [
     "tabulate>=0.9.0",
     "pytest>=8.3.4",
     "pre-commit>=4.1.0",
+    "coverage>=7.6.10",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
